--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ title: Ahmad Akel
 logo: /img/me.png
 #description: text below image
 show_downloads: false
-theme: jekyll-theme-hacker
+theme: jekyll-theme-dinky
